# demo_llm

./: .gitignore  1_embedding_VDB_search.ipynb  embedding_VDB_search.ipynb  gtp.ipynb  llm101x_2023_M2_Notebook_1_v1-en.txt  pyproject.toml  testSummary.ipynb
crse_JonKrohn/: 0_setup.ipynb  1-intro-to-linear-algebra.ipynb
crse_dbrk_llm/: LLM 02 - Embeddings, Vector Databases, and Search.ipynb  LLM 02L - Embeddings, Vector Databases, and Search.ipynb  LLM 03 - Building LLM Chains.ipynb  LLM 04L - Fine-tuning LLMs Lab.ipynb  LLM 04b - Evaluating LLMs.ipynb  LLM 05 - LLMs and Society.ipynb  LLM 05L - LLMs and Society Lab.ipynb  LLM 06 - LLMOps.ipynb
crse_deeplearning_ai/: prompting_guidelines.ipynb
crse_deeplearning_ai/fastbook/: 04_mnist_basics.ipynb
crse_deeplearning_ai_book/: Iterative_Prompt_Develelopment.ipynb
crse_fastai_dl_ai/: is-it-a-bird-creating-a-model-from-your-own-data.ipynb
dbrk_llm/: LLM 02 - Embeddings, Vector Databases, and Search.ipynb  LLM 03L - Building LLM Chains Lab.ipynb  LLM 04a - Fine-tuning LLMs.ipynb
documents/: llm.txt
llm_proxy/: I057149_azure-openai-service_master_samples_getting-started.ipynb  llmacces1-key.json
lrn_misc/: LLM_and_KBs.ipynb
scratches/: scratch.ipynb  test-template.ipynb  test_embed.ipynb
vdb/: chroma.sqlite3
