[tool.poetry]
name = "myllm"
version = "0.1.0"
description = ""
authors = ["Sherin Stephen <sherin.stephen@sap.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
fastai = "*"
duckduckgo_search = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

